Attempt fix drop caps on mobile

--- a/src/assets/styles/partials/_entry.scss
+++ b/src/assets/styles/partials/_entry.scss
@@ -14,7 +14,7 @@
     &:first-child:first-letter {
       color: var(--color-accent);
       float: left;
-      font-size: 7rem;
+      font-size: 535%;
       line-height: calc(var(--size-step-2) * 3);
       padding-top: .35rem;
       padding-right: .5rem;
